added unit test for sendpacket